--- a/styles/cover.css
+++ b/styles/cover.css
@@ -50,11 +50,8 @@ body {
 	}
 }
 
-::selection {
-  background: #000; /* WebKit/Blink Browsers */
-}
-::-moz-selection {
-  background: #000; /* Gecko Browsers */
+::selection, ::-moz-selection {
+  background: #000;
 }
 
 .navbar-default {
@@ -111,25 +108,21 @@ navbar.less:661
   border-radius: 50%;
   width: 15%;
   border: 3px solid #fff;
+  box-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4),
+               0px 5px 10px rgba(0, 0, 0, 0.1),
+               0px 10px 15px rgba(0, 0, 0, 0.1);
 }
 
 h1 {
   font-family: 'Zilla Slab Highlight', cursive;
   font-weight: 400;
   font-size: 5em;
-  /*text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4),
-               0px 8px 13px rgba(0, 0, 0, 0.1),
-               0px 18px 23px rgba(0, 0, 0, 0.1);*/
-  /*color: #000;*/
 }
 
 h2 {
   font-weight: 400;
-  font-size: 1.5em;
-  padding: 2%;
-  text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4),
-               0px 8px 13px rgba(0, 0, 0, 0.1),
-               0px 18px 23px rgba(0, 0, 0, 0.1);
+  font-size: 1.4em;
+  padding: 1%;
 }
 
 .icons a {
@@ -137,8 +130,8 @@ h2 {
   font-size: 2em;
   padding: 10% 2%;
   text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4),
-               0px 8px 13px rgba(0, 0, 0, 0.1),
-               0px 18px 23px rgba(0, 0, 0, 0.1);
+               0px 5px 10px rgba(0, 0, 0, 0.1),
+               0px 10px 15px rgba(0, 0, 0, 0.1);
 }
 
 .fa-github:hover {
