--- a/styles/cover.css
+++ b/styles/cover.css
@@ -51,7 +51,7 @@ body {
 }
 
 ::selection, ::-moz-selection {
-  background: #000;
+  background: rgba(255, 255, 255, 0.5) !important;
 }
 
 .navbar-default {
@@ -59,10 +59,10 @@ body {
     border-color: transparent;
 }
 
-@media (min-width: 768px)
-navbar.less:661
-.navbar {
-     border-radius: 0px;
+@media (min-width: 768px) {
+  .navbar {
+       border-radius: 0px;
+  }
 }
 
 .navbar {
@@ -74,18 +74,29 @@ navbar.less:661
 
 .navbar-default .navbar-nav>li>a {
     color: #fff;
-    border-bottom: 3px solid transparent;
+    border-top: 3px solid transparent;
 }
 
-.navbar-default .navbar-nav>li>a:hover {
-    color: #fff;
-    border-bottom: 3px solid #fff;
+@media (min-width: 768px) {
+  .navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover {
+      color: #fff;
+      background-color: rgba(255, 255, 255, 0.2);
+      border-top: 3px solid transparent;
+      border-bottom: 3px solid rgba(255, 255, 255, 0.5);
+      transition: 0.5s;
+      padding-bottom: 30px;
+  }
 }
 
-.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover {
+.navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover {
     color: #fff;
-    background-color: transparent;
-    border-bottom: 3px solid #fff;
+    background-color: rgba(255, 255, 255, 0.2);
+    border-top: 3px solid transparent;
+    transition: 0.5s;
+}
+
+.navbar-default .navbar-toggle .icon-bar {
+    background-color: #fff;
 }
 
 .navbar-default .navbar-toggle {
@@ -93,8 +104,12 @@ navbar.less:661
 }
 
 .navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover {
-    background-color: #fff;
+    background-color: rgba(255, 255, 255, 0.2);
     color: transparent;
+}
+
+.navbar-default .navbar-collapse, .navbar-default .navbar-form {
+    border: solid 0px transparent;
 }
 
 
@@ -107,7 +122,7 @@ navbar.less:661
 .profile {
   border-radius: 50%;
   width: 15%;
-  border: 3px solid #fff;
+  border: 3px solid rgba(255, 255, 255, 0.8);
   box-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4),
                0px 5px 10px rgba(0, 0, 0, 0.1),
                0px 10px 15px rgba(0, 0, 0, 0.1);
@@ -123,12 +138,13 @@ h2 {
   font-weight: 400;
   font-size: 1.4em;
   padding: 1%;
+  color: rgba(255, 255, 255, 0.8);
 }
 
 .icons a {
   color: #fff;
   font-size: 2em;
-  padding: 10% 2%;
+  padding: 0 2%;
   text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4),
                0px 5px 10px rgba(0, 0, 0, 0.1),
                0px 10px 15px rgba(0, 0, 0, 0.1);
@@ -136,24 +152,27 @@ h2 {
 
 .fa-github:hover {
   color: #221e1b;
+  transition: 0.3s;
 }
 
 .fa-twitter:hover {
   color: #4da7de;
+  transition: 0.3s;
 }
 
 .fa-linkedin:hover {
   color: #3371b7;
+  transition: 0.3s;
+}
+
+.fa-soundcloud:hover {
+  color: #fe3801;
+  transition: 0.3s;
 }
 
 .fa-envelope:hover {
   color: #dd4b39;
-}
-
-hr {
-  width: 400px;
-  border-top: 1px solid #f8f8f8;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
 }
 
 .footer {
