--- a/styles/cover.css
+++ b/styles/cover.css
@@ -1,5 +1,6 @@
 html {
   height: 100%;
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0.5);
 }
 
 body {
@@ -51,7 +52,7 @@ body {
 }
 
 ::selection, ::-moz-selection {
-  background: rgba(255, 255, 255, 0.5) !important;
+  background: rgba(255, 255, 255, 0.5);
 }
 
 .navbar-default {
