--- a/styles/cover.css
+++ b/styles/cover.css
@@ -116,13 +116,14 @@ body {
 
 #content {
   text-align: center;
-  padding: 5%;
+  padding: 1%;
   color: #fff;
 }
 
 .profile {
   border-radius: 50%;
   width: 15%;
+  margin: 1%;
   border: 3px solid rgba(255, 255, 255, 0.8);
   box-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4),
                0px 5px 10px rgba(0, 0, 0, 0.1),
