--- a/styles/2018.css
+++ b/styles/2018.css
@@ -5,7 +5,7 @@ html {
   
   body {
     font-family: 'Inconsolata', monospace;
-    width: 100wh;
+    width: 100vw;
     height: 90vh;
     color: #000;
     background: #fff;
@@ -48,7 +48,7 @@ html {
     font-weight: 400;
     font-size: 1.4em;
     padding: 1%;
-    color: #000;);
+    color: #000;
   }
 
   p {
