--- a/styles/cover.css
+++ b/styles/cover.css
@@ -5,8 +5,8 @@ html {
 
 body {
   font-family: 'Inconsolata', monospace;
-  width: 100wh;
-	height: 90vh;
+  width: 100vw;
+        height: 90vh;
 	color: #fff;
 	background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
 	background-size: 400% 400%;
